Update package description in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "intval/incapsula-ip-fixer",
-    "description": "Extracts real client ip hidden by incapsula proxy",
+    "description": "Extracts real client ip hidden by incapsula cdn, while prevents ip spoofing",
     "minimum-stability": "stable",
     "license": "BSD Licence",
     "keywords": ["incapsula", "proxy"],
